cleanup namming
