# packages/api/src/apis/DefaultApi.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * Deployment Targets API
+ * Target Provider API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
@@ -15,25 +15,25 @@
 
 import * as runtime from '../runtime';
 import type {
-  GetScannerByName200Response,
-  SetScannersDeploymentTargetRequestInner,
+  GetProviderByName200Response,
+  SetProvidersTargetsRequestInner,
 } from '../models/index';
 import {
-    GetScannerByName200ResponseFromJSON,
-    GetScannerByName200ResponseToJSON,
-    SetScannersDeploymentTargetRequestInnerFromJSON,
-    SetScannersDeploymentTargetRequestInnerToJSON,
+    GetProviderByName200ResponseFromJSON,
+    GetProviderByName200ResponseToJSON,
+    SetProvidersTargetsRequestInnerFromJSON,
+    SetProvidersTargetsRequestInnerToJSON,
 } from '../models/index';
 
-export interface GetScannerByNameRequest {
+export interface GetProviderByNameRequest {
     workspace: string;
     name: string;
 }
 
-export interface SetScannersDeploymentTargetRequest {
+export interface SetProvidersTargetsRequest {
     workspace: string;
     scannerId: string;
-    setScannersDeploymentTargetRequestInner: Array<SetScannersDeploymentTargetRequestInner>;
+    setProvidersTargetsRequestInner: Array<SetProvidersTargetsRequestInner>;
 }
 
 /**
@@ -42,20 +42,20 @@ export interface SetScannersDeploymentTargetRequest {
 export class DefaultApi extends runtime.BaseAPI {
 
     /**
-     * Get a scanner by name
+     * Get a provider by name
      */
-    async getScannerByNameRaw(requestParameters: GetScannerByNameRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<GetScannerByName200Response>> {
+    async getProviderByNameRaw(requestParameters: GetProviderByNameRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<GetProviderByName200Response>> {
         if (requestParameters['workspace'] == null) {
             throw new runtime.RequiredError(
                 'workspace',
-                'Required parameter "workspace" was null or undefined when calling getScannerByName().'
+                'Required parameter "workspace" was null or undefined when calling getProviderByName().'
             );
         }
 
         if (requestParameters['name'] == null) {
             throw new runtime.RequiredError(
                 'name',
-                'Required parameter "name" was null or undefined when calling getScannerByName().'
+                'Required parameter "name" was null or undefined when calling getProviderByName().'
             );
         }
 
@@ -70,39 +70,39 @@ export class DefaultApi extends runtime.BaseAPI {
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => GetScannerByName200ResponseFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => GetProviderByName200ResponseFromJSON(jsonValue));
     }
 
     /**
-     * Get a scanner by name
+     * Get a provider by name
      */
-    async getScannerByName(requestParameters: GetScannerByNameRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<GetScannerByName200Response> {
-        const response = await this.getScannerByNameRaw(requestParameters, initOverrides);
+    async getProviderByName(requestParameters: GetProviderByNameRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<GetProviderByName200Response> {
+        const response = await this.getProviderByNameRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
     /**
-     * Sets the deployment target for a scanner
+     * Sets the target for a provider.
      */
-    async setScannersDeploymentTargetRaw(requestParameters: SetScannersDeploymentTargetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
+    async setProvidersTargetsRaw(requestParameters: SetProvidersTargetsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
         if (requestParameters['workspace'] == null) {
             throw new runtime.RequiredError(
                 'workspace',
-                'Required parameter "workspace" was null or undefined when calling setScannersDeploymentTarget().'
+                'Required parameter "workspace" was null or undefined when calling setProvidersTargets().'
             );
         }
 
         if (requestParameters['scannerId'] == null) {
             throw new runtime.RequiredError(
                 'scannerId',
-                'Required parameter "scannerId" was null or undefined when calling setScannersDeploymentTarget().'
+                'Required parameter "scannerId" was null or undefined when calling setProvidersTargets().'
             );
         }
 
-        if (requestParameters['setScannersDeploymentTargetRequestInner'] == null) {
+        if (requestParameters['setProvidersTargetsRequestInner'] == null) {
             throw new runtime.RequiredError(
-                'setScannersDeploymentTargetRequestInner',
-                'Required parameter "setScannersDeploymentTargetRequestInner" was null or undefined when calling setScannersDeploymentTarget().'
+                'setProvidersTargetsRequestInner',
+                'Required parameter "setProvidersTargetsRequestInner" was null or undefined when calling setProvidersTargets().'
             );
         }
 
@@ -113,21 +113,21 @@ export class DefaultApi extends runtime.BaseAPI {
         headerParameters['Content-Type'] = 'application/json';
 
         const response = await this.request({
-            path: `/v1/{workspace}/scanners/{scannerId}/deployment-targets/set`.replace(`{${"workspace"}}`, encodeURIComponent(String(requestParameters['workspace']))).replace(`{${"scannerId"}}`, encodeURIComponent(String(requestParameters['scannerId']))),
+            path: `/v1/{workspace}/scanners/{scannerId}/-targets/set`.replace(`{${"workspace"}}`, encodeURIComponent(String(requestParameters['workspace']))).replace(`{${"scannerId"}}`, encodeURIComponent(String(requestParameters['scannerId']))),
             method: 'PATCH',
             headers: headerParameters,
             query: queryParameters,
-            body: requestParameters['setScannersDeploymentTargetRequestInner']!.map(SetScannersDeploymentTargetRequestInnerToJSON),
+            body: requestParameters['setProvidersTargetsRequestInner']!.map(SetProvidersTargetsRequestInnerToJSON),
         }, initOverrides);
 
         return new runtime.VoidApiResponse(response);
     }
 
     /**
-     * Sets the deployment target for a scanner
+     * Sets the target for a provider.
      */
-    async setScannersDeploymentTarget(requestParameters: SetScannersDeploymentTargetRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
-        await this.setScannersDeploymentTargetRaw(requestParameters, initOverrides);
+    async setProvidersTargets(requestParameters: SetProvidersTargetsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
+        await this.setProvidersTargetsRaw(requestParameters, initOverrides);
     }
 
 }
